syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";
import "config_file.proto";

option go_package = "github.com/polarismesh/specification/source/go/api/v1/config_manage";
option java_package = "com.tencent.polaris.specification.api.v1.config.manage";
option java_outer_classname = "ConfigFileResponseProto";

message ConfigSimpleResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;
}

message ConfigResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;

  ConfigFileGroup configFileGroup = 3;
  ConfigFile configFile = 4;
  ConfigFileRelease configFileRelease = 5;
  ConfigFileReleaseHistory configFileReleaseHistory = 6;
  ConfigFileTemplate configFileTemplate = 7;
}

message ConfigBatchWriteResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;
  google.protobuf.UInt32Value total = 3;

  repeated ConfigResponse responses = 4;
}

message ConfigBatchQueryResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;
  google.protobuf.UInt32Value total = 3;
  repeated ConfigFileGroup configFileGroups = 4;
  repeated ConfigFile configFiles = 5;
  repeated ConfigFileRelease configFileReleases = 6;
  repeated ConfigFileReleaseHistory configFileReleaseHistories = 7;
  repeated ConfigFileTemplate configFileTemplates = 8;
}

message ConfigClientResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;

  ClientConfigFileInfo configFile = 3;
}

message ConfigImportResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;
  repeated ConfigFile createConfigFiles = 3;
  repeated ConfigFile skipConfigFiles = 4;
  repeated ConfigFile overwriteConfigFiles = 5;
}

message ConfigExportResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;
  google.protobuf.BytesValue data = 3;
}

message ConfigEncryptAlgorithmResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;
  repeated google.protobuf.StringValue algorithms = 3;
}

message ConfigClientListResponse {
  google.protobuf.UInt32Value code = 1;
  google.protobuf.StringValue info = 2;

  string namespace = 3;
  string group = 4;
  repeated ClientConfigFileInfo config_file_names = 5 [json_name = "config_file_names"];
}